--- a/WcfLearn/WcfLearn/IISHost/Web.config
+++ b/WcfLearn/WcfLearn/IISHost/Web.config
@@ -9,6 +9,14 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true">
+      <serviceActivations>
+        <add relativeAddress="ExposedService.svc" service="WcfInterface.WcfServiceImpl"/>
+      </serviceActivations>
+    </serviceHostingEnvironment>
+    <services>
+      <service name="WcfInterface.WcfServiceImpl"></service>
+    </services>
     <behaviors>
       <serviceBehaviors>
         <behavior>
@@ -21,8 +29,7 @@
     </behaviors>
     <protocolMapping>
         <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    </protocolMapping> 
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
