--- a/WpfLearn/WpfLearn/WpfLearn.csproj
+++ b/WpfLearn/WpfLearn/WpfLearn.csproj
@@ -96,6 +96,9 @@
     <Compile Include="Controls\Date.xaml.cs">
       <DependentUpon>Date.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\DrawVisual.xaml.cs">
+      <DependentUpon>DrawVisual.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Expander.xaml.cs">
       <DependentUpon>Expander.xaml</DependentUpon>
     </Compile>
@@ -174,6 +177,15 @@
     <Compile Include="Events\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ZoomableCavas\LinkedListExtensions.cs" />
+    <Compile Include="ZoomableCavas\MathExtensions.cs" />
+    <Compile Include="ZoomableCavas\PriorityQuadTree.cs" />
+    <Compile Include="ZoomableCavas\PriorityQueue.cs" />
+    <Compile Include="ZoomableCavas\RectExtensions.cs" />
+    <Compile Include="ZoomableCavas\VirtualPanel.cs" />
+    <Compile Include="ZoomableCavas\ZoomableCanvas.cs" />
+    <Compile Include="Models\CustomCanvas.cs" />
+    <Compile Include="Models\CustomVisual.cs" />
     <Compile Include="Pages\Page2xaml.xaml.cs">
       <DependentUpon>Page2xaml.xaml</DependentUpon>
     </Compile>
@@ -256,6 +268,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\Date.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\DrawVisual.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -471,11 +487,37 @@
     <SplashScreen Include="splash.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\Computer.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\airport.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\pointer.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\s13.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\s14.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\s17.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\s18.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\s19.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\s20.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\s32.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
