--- a/ProMvc/StandardMVC/StandardMVC.csproj
+++ b/ProMvc/StandardMVC/StandardMVC.csproj
@@ -99,6 +99,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ActionHelper.cs" />
     <Compile Include="Utils\BaseController.cs" />
   </ItemGroup>
   <ItemGroup>
