--- a/LearnWcf/CommonWcfServiceLibrary/CommonWcfServiceLibrary.csproj
+++ b/LearnWcf/CommonWcfServiceLibrary/CommonWcfServiceLibrary.csproj
@@ -6,11 +6,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1E924290-6A3D-4B9F-AF13-3981C50372B9}</ProjectGuid>
+    <ProjectGuid>{D31766B1-ED75-4980-9CC3-E3BBEED21469}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WcfInterface</RootNamespace>
-    <AssemblyName>WcfInterface</AssemblyName>
+    <RootNamespace>CommonWcfServiceLibrary</RootNamespace>
+    <AssemblyName>CommonWcfServiceLibrary</AssemblyName>
     <ProjectTypeGuids>{3D9AD99F-2412-4246-B90B-4EAA41C64699};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <StartArguments>/client:"WcfTestClient.exe"</StartArguments>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -45,25 +45,14 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IWcfService.cs" />
+    <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service1.cs" />
     <Compile Include="Utils\ServiceClientProxy.cs" />
     <Compile Include="Utils\ServiceHostHelper.cs" />
-    <Compile Include="WcfServiceImpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Doc\WCF.docx" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Impl\" />
-    <Folder Include="Interface\" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
