--- a/LearnWcf/ConsoleServiceHost/App.config
+++ b/LearnWcf/ConsoleServiceHost/App.config
@@ -13,6 +13,7 @@
         <!--为service和mex增加基地址-->
         <host>
           <baseAddresses>
+            <!--可以添加多个基地址-->
             <add baseAddress="http://localhost:19829/CmluService"/>
           </baseAddresses>
         </host>
