--- a/LearnWcf/CommonWcfServiceLibrary/CommonWcfServiceLibrary.csproj
+++ b/LearnWcf/CommonWcfServiceLibrary/CommonWcfServiceLibrary.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Activation" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
@@ -49,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.cs" />
     <Compile Include="Utils\ServiceClientProxy.cs" />
+    <Compile Include="Utils\ServiceFactory.cs" />
     <Compile Include="Utils\ServiceHostHelper.cs" />
   </ItemGroup>
   <ItemGroup>
