--- a/LearnWcf/ConsoleServiceHost/App.config
+++ b/LearnWcf/ConsoleServiceHost/App.config
@@ -5,12 +5,24 @@
   </startup>
 
   <system.serviceModel>
+    
+    <bindings>
+      <wsHttpBinding>
+        <binding name="WsHttpBindingConfig" closeTimeout="00:00:30" openTimeout="00:00:30" sendTimeout="00:00:40" >
+          
+        </binding>
+      </wsHttpBinding>
+    </bindings>
+    
     <services>
+      
+      <!--
+      name：指定Service类型，全限定名
+      -->
       <service name="CommonWcfServiceLibrary.Service1" behaviorConfiguration="CmluServiceBehavior">
-        <endpoint address="" binding="wsHttpBinding" contract="CommonWcfServiceLibrary.IService1" />
-        <!--Enable the MEX endpoint-->
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-        <!--为service和mex增加基地址-->
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="WsHttpBindingConfig" contract="CommonWcfServiceLibrary.IService1" />
+
+        <!--为service增加基地址-->
         <host>
           <baseAddresses>
             <!--可以添加多个基地址-->
@@ -23,7 +35,9 @@
     <behaviors>
       <serviceBehaviors>
         <behavior name="CmluServiceBehavior">
+          <!--通过http来暴露元数据-->
           <serviceMetadata httpGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
