--- a/LearnWcf/CommonWcfClient/App.config
+++ b/LearnWcf/CommonWcfClient/App.config
@@ -7,16 +7,35 @@
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
-        <binding name="WSHttpBinding_IService1" />
+        <!--
+        name:标志绑定
+        closeTimeout: 完成关闭操作的时间间隔，默认值为00:01:00
+        maxBufferPoolSize:设置此绑定的缓冲池大小，默认值是512*1024byte  536870912=512k
+        maxReceivedMeassageSize: 此绑定通道上可以接受的最大消息大小，超过此限制，接收方将删除该消息
+        messageEncoding: 对消息编码的编码器  Text:表示文本消息编码器（默认方式），Mtom:使用消息传输组织机制 1.0 (MTOM) 编码器。
+        openTimeout:完成打开操作的时间间隔  默认值为00:01:00
+        sendTimeout: 完成发送操作的时间间隔  默认值为00：01:00
+        textEncoding: 此绑定上发出消息的字符集编码：  默认是Utf8TextEncoding 
+        receiveTimeout: 指定为完成接收操作的时间间隔   默认值为00：01:00
+        -->
+        <binding name="WSHttpBinding_IService1"  closeTimeout="00:00:30" receiveTimeout="00:01:00" openTimeout="00:00:30" sendTimeout="00:00:40" maxBufferPoolSize="536870912" maxReceivedMessageSize="536870912">
+          <security mode="None" />
+        </binding>
       </wsHttpBinding>
     </bindings>
+    
+    <!--客户端连接使用的Endpoint配置-->
     <client>
+      <!--
+      address:  ServiceHost的这个Endpoint的地址
+      binding:  指定这个Endpoint使用的binding,
+      contract: 生成接口代理的接口的全限定名
+      name: endpoint的名称
+      bindingConfiguration: 指定客户端binding的具体设置，与<bindings>元素下同类型binding的name一致
+      -->
       <endpoint address="http://localhost:19829/CmluService" binding="wsHttpBinding"
           bindingConfiguration="WSHttpBinding_IService1" contract="IService1"
           name="WSHttpBinding_IService1">
-        <identity>
-          <userPrincipalName value="cmlu-PC\cmlu" />
-        </identity>
       </endpoint>
     </client>
   </system.serviceModel>
