--- a/LearnWcf/CommonWcfClient/App.config
+++ b/LearnWcf/CommonWcfClient/App.config
@@ -19,6 +19,11 @@
         receiveTimeout: 指定为完成接收操作的时间间隔   默认值为00：01:00
         -->
         <binding name="WSHttpBinding_IService1"  closeTimeout="00:00:30" receiveTimeout="00:01:00" openTimeout="00:00:30" sendTimeout="00:00:40" maxBufferPoolSize="536870912" maxReceivedMessageSize="536870912">
+          <!--
+          是否支持可靠的Session,意味着消息是按照发送顺序处理的，并且保证每个消息传递一次，客户端和服务器端均需配置才能支持可靠session
+          inactivityTimeout: transport不活跃的时间后，连接自动关闭
+          -->
+          <reliableSession enabled="true" inactivityTimeout="00:10:00"/>
           <security mode="None" />
         </binding>
       </wsHttpBinding>
@@ -30,11 +35,11 @@
       address:  ServiceHost的这个Endpoint的地址
       binding:  指定这个Endpoint使用的binding,
       contract: 生成接口代理的接口的全限定名
-      name: endpoint的名称
+      name: endpoint的名称,可以传递给ClientBase做参数
       bindingConfiguration: 指定客户端binding的具体设置，与<bindings>元素下同类型binding的name一致
       -->
-      <endpoint address="http://localhost:19829/CmluService" binding="wsHttpBinding"
-          bindingConfiguration="WSHttpBinding_IService1" contract="IService1"
+      <endpoint address="http://localhost:19829" binding="wsHttpBinding"
+          bindingConfiguration="WSHttpBinding_IService1" contract="CommonWcfClient.IService1"
           name="WSHttpBinding_IService1">
       </endpoint>
     </client>
