--- a/LearnWcf/ConsoleServiceHost/App.config
+++ b/LearnWcf/ConsoleServiceHost/App.config
@@ -69,9 +69,15 @@ maxNameTableCharCount
 maxStringContentLength
       一个正整数，指定 XML 元素内容中允许包含的最大字符数。默认值为 8192。
           -->
-          <readerQuotas maxStringContentLength="65536"/>
+          <readerQuotas maxArrayLength="16384" maxBytesPerRead="4096" maxDepth="32" maxNameTableCharCount="16384" maxStringContentLength="65536"/>
           <!--None: 禁用安全性-->
           <security mode="None"></security>
+
+          <!--
+          是否支持可靠的Session,意味着消息是按照发送顺序处理的，并且保证每个消息传递一次，客户端和服务器端均需配置才能支持可靠session
+          inactivityTimeout: transport不活跃的时间后，连接自动关闭
+          -->
+          <reliableSession enabled="true" inactivityTimeout="00:08:00"/>
         </binding>
       </wsHttpBinding>
     </bindings>
