--- a/LearnWcf/CommonWcfServiceLibrary/CommonWcfServiceLibrary.csproj
+++ b/LearnWcf/CommonWcfServiceLibrary/CommonWcfServiceLibrary.csproj
@@ -49,7 +49,7 @@
     <Compile Include="IService1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.cs" />
-    <Compile Include="Utils\ServiceClientProxy.cs" />
+    <Compile Include="Utils\ServiceClient.cs" />
     <Compile Include="Utils\ServiceFactory.cs" />
     <Compile Include="Utils\ServiceHostHelper.cs" />
   </ItemGroup>
