--- a/LearnWcf/ConsoleServiceHost/App.config
+++ b/LearnWcf/ConsoleServiceHost/App.config
@@ -76,6 +76,7 @@ maxStringContentLength
           <!--
           是否支持可靠的Session,意味着消息是按照发送顺序处理的，并且保证每个消息传递一次，客户端和服务器端均需配置才能支持可靠session
           inactivityTimeout: transport不活跃的时间后，连接自动关闭
+          每创建一个代理实例相当于创建一个Session,除非必要，否则不要使用session，
           -->
           <reliableSession enabled="true" inactivityTimeout="00:08:00"/>
         </binding>
