--- a/LearnWcf/ConsoleServiceHost/App.config
+++ b/LearnWcf/ConsoleServiceHost/App.config
@@ -47,15 +47,16 @@
         <!--
         name:标志绑定
         closeTimeout: 完成关闭操作的时间间隔，默认值为00:01:00
-        maxBufferPoolSize:设置此绑定的缓冲池大小，默认值是512*1024byte  536870912=512k
-        maxReceivedMeassageSize: 此绑定通道上可以接受的最大消息大小，超过此限制，接收方将删除该消息
+        maxBufferPoolSize:设置此绑定的缓冲池大小，默认值是512*1024byte  5242880=5M
+        maxReceivedMeassageSize: 此绑定通道上可以接受的最大消息大小（字节），超过此限制，接收方将删除该消息 67108864=64M
         messageEncoding: 对消息编码的编码器  Text:表示文本消息编码器（默认方式），Mtom:使用消息传输组织机制 1.0 (MTOM) 编码器。
         openTimeout:完成打开操作的时间间隔  默认值为00:01:00
         sendTimeout: 完成发送操作的时间间隔  默认值为00：01:00
         textEncoding: 此绑定上发出消息的字符集编码：  默认是Utf8TextEncoding 
         receiveTimeout: 指定为完成接收操作的时间间隔  默认值为00：01:00
+        transactionFlow： 一个布尔值，指定绑定是否支持流动 WS-Transactions。默认值为 false。
         -->
-        <binding name="WsHttpBindingConfig" closeTimeout="00:00:30" openTimeout="00:00:30" sendTimeout="00:00:40" receiveTimeout="00:01:00" maxBufferPoolSize="536870912" maxReceivedMessageSize="536870912">
+        <binding name="WsHttpBindingConfig" closeTimeout="00:00:30" openTimeout="00:00:30" sendTimeout="00:00:40" receiveTimeout="00:01:00" maxBufferPoolSize="5242880" maxReceivedMessageSize="67108864" textEncoding="utf-8" messageEncoding="Text">
           <!--
           指定采用该配置的Endpoint的SOAP消息的复杂性约束
 maxArrayLength
