--- a/LearnWcf/ConsoleServiceHost/App.config
+++ b/LearnWcf/ConsoleServiceHost/App.config
@@ -82,6 +82,24 @@ maxStringContentLength
           <reliableSession enabled="true" inactivityTimeout="00:08:00"/>
         </binding>
       </wsHttpBinding>
+
+      <basicHttpBinding>
+        <!--
+        name:标志绑定
+        closeTimeout: 完成关闭操作的时间间隔，默认值为00:01:00
+        maxBufferPoolSize:设置此绑定的缓冲池大小，默认值是512*1024byte  5242880=5M
+        maxReceivedMeassageSize: 此绑定通道上可以接受的最大消息大小（字节），超过此限制，接收方将删除该消息 134217728=128M
+        messageEncoding: 对消息编码的编码器  Text:表示文本消息编码器（默认方式），Mtom:使用消息传输组织机制 1.0 (MTOM) 编码器。
+        openTimeout:完成打开操作的时间间隔  默认值为00:01:00
+        sendTimeout: 完成发送操作的时间间隔  默认值为00：01:00
+        textEncoding: 此绑定上发出消息的字符集编码：  默认是Utf8TextEncoding 
+        receiveTimeout: 指定为完成接收操作的时间间隔  默认值为00：01:00
+        transactionFlow： 一个布尔值，指定绑定是否支持流动 WS-Transactions。默认值为 false。
+        -->
+        <binding name="BasicHttpBindingConfig" closeTimeout="00:00:30" openTimeout="00:00:30" sendTimeout="00:00:40" receiveTimeout="00:01:00" maxBufferPoolSize="5242880" maxReceivedMessageSize="134217728" textEncoding="utf-8" messageEncoding="Text">
+          <security mode="None"/>
+        </binding>
+      </basicHttpBinding>
     </bindings>
   
     <behaviors>
@@ -94,6 +112,7 @@ maxStringContentLength
           httpGetUrl: 如果httpGetEnabled为true，这个属性指示使用哪个URL地址发布服务的WSDL, 果这个属性没有设置，则使用服务的HTTP类型的baseAddress后面加上?WSDL
           -->
           <serviceMetadata httpGetEnabled="true"/>
+          <!--true:接收故障异常详细信息以进行调试  false避免泄露异常信息-->
           <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
